@@ -43,6 +43,7 @@ lib/Psh2/Builtins/Source.pm
 lib/Psh2/Builtins/Sub.pm
 lib/Psh2/Builtins/Symbols.pm
 lib/Psh2/Builtins/True.pm
+lib/Psh2/Builtins/Ulimit.pm
 lib/Psh2/Builtins/Unalias.pm
 lib/Psh2/Builtins/Unshift.pm
 lib/Psh2/Builtins/Use.pm
